[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archipelago-repository"
version = "0.0.1"
description = "APWorld packaging and repository tools for Archipelago multiworld randomizer (workspace root)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["archipelago", "apworld", "randomizer", "packaging", "repository"]
authors = [
  { name = "Jeff Edwards", email = "jeffe@amazon.com" },
]

# Workspace root - no runtime dependencies
# Individual packages are in packages/
dependencies = []

[project.urls]
Documentation = "https://github.com/ArchipelagoMW/archipelago-repository#readme"
Issues = "https://github.com/ArchipelagoMW/archipelago-repository/issues"
Source = "https://github.com/ArchipelagoMW/archipelago-repository"

# =============================================================================
# Hatch Environment Configuration
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]

[tool.hatch.envs.default]
workspace.members = ["packages/*"]
path = ".venv"
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "httpx>=0.24.0",
]

# Install all workspace packages in editable mode
[tool.hatch.envs.default.env-vars]
PIP_FIND_LINKS = "packages/"


# =============================================================================
# Hatch Test Matrix Configuration
# =============================================================================
[tool.hatch.envs.hatch-test]
workspace.members = ["packages/*"]
extra-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "httpx>=0.24.0",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.hatch-test.scripts]
apworld-version-tests = "pytest packages/apworld-version/tests {args:}"
apworld-manifest-tests = "pytest packages/apworld-manifest/tests {args:}"
apworld-vendor-tests = "pytest packages/apworld-vendor/tests {args:}"
apworld-build-tests = "pytest packages/apworld-build/tests {args:}"
apworld-api-tests = "pytest packages/apworld-api/tests {args:}"
apworld-cli-tests = "pytest packages/apworld-cli/tests {args:}"
apworld-integration-tests = "pytest tests {args:}"

run = [
    "apworld-version-tests",
    "apworld-manifest-tests",
    "apworld-vendor-tests",
    "apworld-build-tests",
    "apworld-api-tests",
    "apworld-cli-tests",
    "apworld-integration-tests",
]
run-cov = [
    "apworld-version-tests --cov=packages",
    "apworld-manifest-tests --cov=packages",
    "apworld-vendor-tests --cov=packages",
    "apworld-build-tests --cov=packages",
    "apworld-api-tests --cov=packages",
    "apworld-cli-tests --cov=packages",
    "apworld-integration-tests --cov=packages",
]

# =============================================================================
# Hatch Lint/Type Environment
# =============================================================================

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy packages/*/src {args}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.1.0",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check {args:.}"
format = "ruff format {args:.}"
fix = "ruff check --fix {args:.}"
all = ["check", "format"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["packages/*/src"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
