[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archipelago-repository"
version = "0.0.1"
description = "Island packaging and repository tools for Archipelago multiworld randomizer (workspace root)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["archipelago", "island", "randomizer", "packaging", "repository"]
authors = [
  { name = "Jeff Edwards", email = "jeffe@amazon.com" },
]

# Workspace root - no runtime dependencies
# Individual packages are in packages/
dependencies = []

[project.urls]
Documentation = "https://github.com/teruokun/apworld-packaging-tools#readme"
Issues = "https://github.com/teruokun/apworld-packaging-tools/issues"
Source = "https://github.com/teruokun/apworld-packaging-tools"

# =============================================================================
# Hatch Environment Configuration
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]

[tool.hatch.envs.default]
workspace.members = ["packages/*"]
path = ".venv"
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "httpx>=0.24.0",
]

# Install all workspace packages in editable mode
[tool.hatch.envs.default.env-vars]
PIP_FIND_LINKS = "packages/"


# =============================================================================
# Hatch Test Matrix Configuration
# =============================================================================
[tool.hatch.envs.hatch-test]
workspace.members = ["packages/*"]
extra-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "httpx>=0.24.0",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.hatch-test.scripts]
island-version-tests = "pytest packages/island-version/tests {args:}"
island-manifest-tests = "pytest packages/island-manifest/tests {args:}"
island-vendor-tests = "pytest packages/island-vendor/tests {args:}"
island-build-tests = "pytest packages/island-build/tests {args:}"
island-api-tests = "pytest packages/island-api/tests {args:}"
island-cli-tests = "pytest packages/island-cli/tests {args:}"
island-integration-tests = "pytest tests {args:}"

run = [
    "island-version-tests",
    "island-manifest-tests",
    "island-vendor-tests",
    "island-build-tests",
    "island-api-tests",
    "island-cli-tests",
    "island-integration-tests",
]
run-cov = [
    "island-version-tests --cov=packages",
    "island-manifest-tests --cov=packages",
    "island-vendor-tests --cov=packages",
    "island-build-tests --cov=packages",
    "island-api-tests --cov=packages",
    "island-cli-tests --cov=packages",
    "island-integration-tests --cov=packages",
]

# =============================================================================
# Hatch Lint/Type Environment
# =============================================================================

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy packages/*/src {args}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.1.0",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check {args:.}"
format = "ruff format {args:.}"
fix = "ruff check --fix {args:.}"
all = ["check", "format"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["packages/*/src"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
