[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-game"
version = "1.0.0"
description = "A sample APWorld for testing the build system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Test Author", email = "test@example.com" },
]
keywords = ["archipelago", "sample"]

[tool.apworld]
game = "Sample Game"
minimum_ap_version = "0.5.0"
